[BE] refactor : JoinedMeetingResponse static import로 단순화